[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortress-crypt-audit"
version = "2.0.1"
description = "6-layer double-cascade post-quantum encryption with trap sequences and duress mode"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.20",
    "cryptography>=42.0",
    "argon2-cffi>=23.1",
    "click>=8.1",
]

[project.optional-dependencies]
pq = ["pqcrypto>=0.4"]

[project.scripts]
fortress = "fortress.cli:main"

[tool.setuptools.packages.find]
include = ["fortress*"]
